[package]
name = "planetwars-client"
version = "0.1.0"
authors = ["Ilion Beyst <ilion.beyst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
mozaic-core = { git = "https://github.com/iasoon/MOZAIC2", rev="ef0cd21" }
